R10 release notes updates (#5987)
* Draft: 4.10.0 Release Notes Summary

* couple R10 ReleaseNotes updates

* release note pillar github query filters

--- a/docs/4.10.0_ReleaseNotes_Draft.md
+++ b/docs/4.10.0_ReleaseNotes_Draft.md
@@ -1,5 +1,6 @@
 # August 2020 (version 4.10.0) 
-Welcome to the August 2020 release of the Bot Framework SDK. We are introducing some exciting [Additional New Features](#Additional-New-SDK-Features) with [Updates and Enhancements](#Other-Updates-and-Enhancements) primarily focused in five key pillars: 
+
+Welcome to the August 2020 release of the Bot Framework SDK. We are introducing some exciting [Additional New Features](#Additional-New-SDK-Features) with [Updates and Enhancements](#Other-Updates-and-Enhancements). This milestone we focused on all-up quality and engineering debt, broken down across the following pillars: 
 
 - [Documentation](#Documentation) Includes improvements to existing documentation and net new documentation centered on recurring issues and developer pain points.
 
@@ -11,8 +12,10 @@ Welcome to the August 2020 release of the Bot Framework SDK. We are introducing 
 
 - [Team Agility](#Team-Agility) Improved validation of SDK code and integration with supporting libraries and environments. Continuous integarion and build pipleline improvements.
 
+**Insiders**: Want to try new features as soon as possible? You can download the nightly Insiders build [[C#](https://github.com/microsoft/botbuilder-dotnet/blob/master/UsingMyGet.md)] [[JS](https://github.com/microsoft/botbuilder-js/blob/master/UsingMyGet.md)] [[Python](https://github.com/microsoft/botbuilder-python/blob/master/UsingTestPyPI.md)] [[CLI](https://github.com/Microsoft/botframework-cli#nightly-builds)] and try the latest updates as soon as they are available. And for the latest Bot Framework news, updates, and content, follow us on Twitter @msbotframework!
+
 ## Documentation
-[BF Docs GitHub](https://github.com/issues?q=is%3Aissue+label%3A%22BF+Docs%22)
+[BF Docs GitHub](https://github.com/issues?q=is%3Aissue+label%3A%22BF+Docs%22+label%3AR10)
 
 Following feedback from customers and the Bot Framework Support Team, a number of net new documents have been written as well as updates to existing documentation. These are helpful towards providing answers and information relating to recurring issues from bot developers.
 
@@ -22,19 +25,21 @@ Following feedback from customers and the Bot Framework Support Team, a number
 - New documents addressing recurring bot developer issues
 
 ## Customer Supportability 
-[BF Supportability GitHub](https://github.com/issues?q=is%3Aissue+label%3A%22BF+Supportability%22)
+
+[BF Supportability GitHub](https://github.com/issues?q=is%3Aissue+label%3A%22BF+Supportability%22+label%3AR10)
 
 Developers using the Microsoft Bot Framework have many avenues for getting help. See [additional resources](https://docs.microsoft.com/en-us/azure/bot-service/bot-service-resources-links-help) Internal tools have been improved to increase the responsiveness of the engineering team in areas of most interest to developers.
 
 - Creation of internal bots and improved tools for customer support
 - Improved analytics of trends in customer reported feature requests and issues
-- Coordination of labels across `Git Hub` repositories
+- Coordination of labels across `GitHub` repositories
 
 ## Customer Ask 
-[BF Customer Ask GitHub](https://github.com/issues?q=is%3Aissue+label%3A%22BF+Customer+Ask%22)
+[BF Customer Ask GitHub](https://github.com/issues?q=is%3Aissue+label%3A%22BF+Customer+Ask%22+label%3AR10)
 
 - Additional Teams channel lifecycle events
-- Improved `Applicaition Insights` integration
+- Improved `Application Insights` integration
+- Coordination of labels across `Git Hub` repositories
 - Add Locale to `ConversationUpdate`
 - Update `CardAction` to support alt text for images on buttons
 - Update `Skill Handler` to return `Resource Response`
@@ -56,7 +61,8 @@ Developers using the Microsoft Bot Framework have many avenues for getting help.
     - Integration tests with Direct Line JS and adaptive cards
 
 ## Team Agility
-[BF Team Agility GitHub](https://github.com/issues?q=is%3Aissue+label%3A%22BF+Agility%22)
+
+[BF Team Agility GitHub](https://github.com/issues?q=is%3Aissue+label%3A%22BF+Agility%22+label%3AR10)
 
 Improvements have been made across SDK repositories towards decreased CI pipeline times, improved testing, including both functional integration and unit tests.
 
@@ -84,10 +90,11 @@ Improvements have been made across SDK repositories towards decreased CI pipelin
 
 ## Microsoft Teams 
 
-- SSO support
+- SDK and `OAuthPrompt` now support Teams SSO
 - Increased `Adaptive Dialog` support for Teams events
 - SDK supprot for lifecyle events: `ChannelRestored`, `TeamArchived`, `TeamUnarchived`,`TeamRestored`, `TeamDeleted`, and `TeamHardDeleted` 
 - `InstallationUpdate` activity type support
+- `LinkToMessage` added to `MessageActionsPayload`
 
 ## Bot Framework CLI Tools
 - `Lg` added as BF-CLI core plugin
@@ -118,7 +125,6 @@ See Composer [1.1.0 Release Notes](https://github.com/microsoft/BotFramework-Com
 - Fixed a bug where trying to open the sign-in link on an OAuth card when ngrok was not configured would cause the Windows File Explorer to open
 - Improved CONTRIBUTING.md to more accurately reflect requisites to build the Emulator from source
 - Updates to Cosmos DB service editor dialog
-- Upgrded Web Chat to 4.10.0
 
 ## Additional New SDK Features
 - [Orchestrator](https://aka.ms/bf-orchestrator): Transformer based solution that runs locally with your bot to dispatch across one or more [Bot Builder Skills](https://docs.microsoft.com/en-us/azure/bot-service/bot-builder-skills-overview) or [LUIS](https://www.luis.ai/) applications or [QnA Maker](https://www.qnamaker.ai/) Knowledgebase.
@@ -126,5 +132,3 @@ See Composer [1.1.0 Release Notes](https://github.com/microsoft/BotFramework-Com
 - [Microsoft.Bot.Builder.Azure.Queues](Microsoft.Bot.Builder.Azure.Queues) (preview) Enables more easily interacting with [Azure Queues](https://docs.microsoft.com/azure/storage/queues/storage-queues-introduction) and `ContinueConversationLater` Dialog
 
 - [Microsoft.Bot.Builder.Azure.Blobs](Microsoft.Bot.Builder.Azure.Blobs) `BlobsStorage` and `BlobsTranscriptStore` implementations replacing `AzureBlobStorage` and `AzureBlobTranscriptStore`. This library uses [Azure.Storage.Blobs](https://www.nuget.org/packages/Azure.Storage.Blobs) and is a replacement for the older [Microsoft.Azure.Storage.Blob](https://www.nuget.org/packages/Microsoft.Azure.Storage.Blob/) used by [Microsoft.Bot.Builder.Azure](https://www.nuget.org/packages/Microsoft.Bot.Builder.Azure/).
-
-**Insiders**: Want to try new features as soon as possible? You can download the nightly Insiders build [[C#](https://github.com/microsoft/botbuilder-dotnet/blob/master/UsingMyGet.md)] [[JS](https://github.com/microsoft/botbuilder-js/blob/master/UsingMyGet.md)] [[Python](https://github.com/microsoft/botbuilder-python/blob/master/UsingTestPyPI.md)] [[CLI](https://github.com/Microsoft/botframework-cli#nightly-builds)] and try the latest updates as soon as they are available. And for the latest Bot Framework news, updates, and content, follow us on Twitter @msbotframework!
